--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,13 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-/* -------------------- BASE HEADER - FOOTER STYES -------------------- */
+/* -------------------- BASE STYES -------------------- */
+
+.content-wrapper {
+  width: 90%;
+}
+
+/* -------------------- HEADER & FOOTER BASE STYES -------------------- */
 
 header,
 footer {
@@ -109,14 +115,20 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 50%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  width: 100%;
 }
 
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
 footer .social-icons {
   display: flex;
   justify-content: space-around;
@@ -132,7 +144,18 @@ footer .social-icons p {
 /* -------------------- HEADER -------------------- */
 
 header {
+  padding: 15px 0;
+}
 
+.header-divider {
+  width: 100%;
+}
+
+header img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
 }
 
 /* -------------------- HERO AREA -------------------- */
@@ -141,6 +164,14 @@ header {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  height: 500px;
+  background: url('../img/jake-melara-30679-unsplash.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
+.hero-area h1 {
+  margin: 55px 0;
 }
 
 /* -------------------- NEWSLETTER -------------------- */
@@ -150,6 +181,14 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.form-description {
+  margin: 30px 0;
+}
+
+.features article {
+  width: 63%;
 }
 
 /* -------------------- FEATURES -------------------- */
@@ -167,6 +206,14 @@ aside {
   flex-flow: row wrap;
 }
 
+.features h2 {
+  margin: 50px 0;
+}
+
+.features p {
+  margin: 0; /*--to override browser's default <p> margins--*/
+}
+
 /* -------------------- REVIEWS -------------------- */
 
 .reviews {
@@ -175,10 +222,22 @@ aside {
   flex-flow: row wrap;
 }
 
+.reviews h2 {
+  margin: 50px 0;
+}
+
+.reviews h3 {
+  width: 55%;
+}
+
 /* -------------------- FOOTER -------------------- */
 
 footer {
 
+}
+
+footer p {
+  margin: 0; /*--to override browser's default <p> margins--*/
 }
 
 /* -------------------- ABOUT PAGE -------------------- */
