added breakpoints and Tablet styles

--- a/css/main.css
+++ b/css/main.css
@@ -93,14 +93,14 @@ textarea {
   width: 90%;
 }
 
-/* -------------------- HEADER & FOOTER BASE STYES -------------------- */
+/* -------------------- HEADER -------------------- */
 
-header,
-footer {
+header {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  padding: 15px 0;
 }
 
 header .content-wrapper {
@@ -110,52 +110,34 @@ header .content-wrapper {
   flex-flow: row wrap;
 }
 
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
+  background: #f2f2f2;
+}
+
 header nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
-  width: 50%;
+  width: 60%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
-  align-items: center;
   width: 100%;
-}
-
-footer .content-wrapper {
-  width: 55%;
-  margin: 50px 0;
-}
-footer .social-icons {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-footer .social-icons p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* -------------------- HEADER -------------------- */
-
-header {
-  padding: 15px 0;
-}
-
-.header-divider {
-  width: 100%;
+  padding: 0;
+  list-style: none;
 }
 
 header img {
   display: block;
   margin-left: auto;
-  margin-right: auto;
-  width: 70%;
+  margin-right: auto; /* these 3 properties center an image in <a> element */
+  width: 70%; 
 }
 
 /* -------------------- HERO AREA -------------------- */
@@ -181,15 +163,15 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  padding: 10px 0 50px 0;
 }
 
-.form-description {
-  margin: 30px 0;
+.form {
+	display: flex;
+	flex-flow: column wrap;
+	
 }
 
-.features article {
-  width: 63%;
-}
 
 /* -------------------- FEATURES -------------------- */
 
@@ -197,6 +179,7 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: #f2f2f2;
 }
 
 .features .features-items {
@@ -206,8 +189,21 @@ aside {
   flex-flow: row wrap;
 }
 
+.features .content-wrapper {
+	padding: 50px 0 65px 0;
+}
+
+.features article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+  flex-basis: 63%;
+  margin: 30px 0;
+}
+
 .features h2 {
-  margin: 50px 0;
+  margin: 0; /*--to override browser's default <p> margins--*/
 }
 
 .features p {
@@ -220,12 +216,14 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  padding: 30px 0;
 }
 
-.reviews h2 {
-  margin: 50px 0;
+.reviews-image {
+	background: url('../img/omar-lopez-296944-unsplash.jpg');
+	background-size: cover;
+	height: 200px;
 }
-
 .reviews h3 {
   width: 55%;
 }
@@ -233,11 +231,44 @@ aside {
 /* -------------------- FOOTER -------------------- */
 
 footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column nowrap;
+  background: #f2f2f2;
+}
 
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .contact {
+	margin-bottom: 50px;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact, .social {
+	text-align: center;
 }
 
 footer p {
   margin: 0; /*--to override browser's default <p> margins--*/
+}
+
+footer .copyright {
+	margin: 20px 0;
 }
 
 /* -------------------- ABOUT PAGE -------------------- */
@@ -256,6 +287,10 @@ footer p {
   flex-flow: row wrap;
 }
 
+.contact-content p {
+  margin: 0;
+}
+
 /* -------------------- FAQ PAGE -------------------- */
 
 .faq {
@@ -270,7 +305,12 @@ footer p {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin-top: 50px;
 }
+
+.faq h2 {
+		width: 100%;
+	}
 
 
 /* ==========================================================================
@@ -361,15 +401,166 @@ footer p {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+/* -------------------- TABLET -------------------- */
+
+@media only screen and (min-width: 768px) {
+
+	/*--------- BASE STYLES ---------*/
+
+	.content-wrapper {
+		width: 80%;
+		max-width: 640px;
+	}
+
+	/*--------- HEADER ---------*/
+
+	header {
+		justify-content: space-around;
+		padding: 33px 0;
+	}
+
+	header .content-wrapper {
+		justify-content: space-between;
+		flex-flow: row nowrap;
+	}
+
+	header a {
+		width: 35%;
+	}
+
+	header img {
+		display: inline-block;
+		margin-left: 0;
+		width: 100%;
+	}
+
+	header nav {
+		width: 25%;
+	}
+
+	header nav ul {
+		justify-content: space-between;
+	}
+
+	/*--------- HERO AREA ---------*/
+
+	.hero-area {
+		height: 600px;
+	}
+
+	.hero-area h1 {
+		margin: 100px 0;
+	}
+
+	.form-description {
+		width: 45%;
+	}
+
+	.form {
+		width: 45%;
+	}
+
+	/*--------- FEATURES ---------*/
+
+	aside .content-wrapper {
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-start;
+		flex-flow: row wrap;
+	}
+
+	.features .content-wrapper {
+		padding: 100px 0;
+	}
+
+	.features .features-items {
+		justify-content: space-around;
+	}
+
+	.features article {
+		flex-basis: 34%;
+	}
+
+	/*--------- REVIEWS ---------*/
+
+	.reviews {
+		padding: 80px 0;
+	}
+
+	.reviews h2 {
+		width: 75%;
+	}
+
+	.reviews article {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.reviews-image {
+		flex-basis: 48%;
+	}
+
+	.reviews-text {
+		flex-basis: 48%;
+	}
+
+	.reviews h3 {
+		margin: 0;
+	}
+
+	/*--------- FOOTER ---------*/
+
+	footer .content-wrapper {
+	  width: 80%;
+	}
+
+	.footer-content {
+		display: flex;
+		justify-content: space-around;
+		align-items: flex-start;
+	}
+
+	/*--------- FAQ PAGE ---------*/
+
+	.faq .content-wrapper {
+		justify-content: space-between;
+	}
+
+	.faq-content {
+		flex-basis: 45%;
+	}
+
+	/*--------- ABOUT PAGE ---------*/
+	
+	.mission-content {
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
+
+	.mission-content p {
+		flex-basis: 48%;
+	}
+
+	.contact-section .content-wrapper h2 {
+		width: 80%;
+	}
+
+	.contact-content {
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
+
+	.contact-content div {
+		flex-basis: 48%;
+	}
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+/* -------------------- DESKTOP -------------------- */
+
+@media only screen and (min-width: 1200px) {
+
 }
 
 /* ==========================================================================
