--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ body {
 }
 
 ul, ol {
-
+  color: #e2e3ed;
 }
 
 a {
@@ -113,29 +113,34 @@ h1 {
   font-family: 'Poppins', sans-serif;
   font-size: 2.25em;
   font-weight: 500;
+  color: #e2e3ed;
 }
 
 h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
   font-weight: 500;
+  color: #e2e3ed;
 }
 
 h3 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.125em;
   font-weight: 500;
+  color: #e2e3ed;
 }
 
 h4 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.3125em;
   font-weight: 500;
+  color: #e2e3ed;
 }
 
 p {
   font-size: 0.875em;
   line-height: 1.4;
+  color: #e2e3ed;
 }
 
 img {
@@ -148,6 +153,7 @@ figure {
 
 address {
   font-style: normal;
+  color: #e2e3ed;
 }
 
 .content-wrapper {
@@ -162,6 +168,7 @@ header {
   align-items: center;
   flex-flow: row wrap;
   padding: 15px 0;
+  background-color: #202322;
 }
 
 header .content-wrapper {
@@ -229,14 +236,30 @@ aside {
   align-items: center;
   flex-flow: row wrap;
   padding: 10px 0 50px 0;
+  background-color: #527158;
 }
 
-.form {
-	display: flex;
-	flex-flow: column wrap;
-	
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
 }
 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
 
 /* -------------------------------- FEATURES -------------------------------- */
 
@@ -244,7 +267,9 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  background: #f2f2f2;
+  background: url('../img/rawpixel-800820-unsplash1.jpg');
+  background-position: center;
+  background-size: cover;
 }
 
 .features .features-items {
@@ -283,15 +308,13 @@ aside {
   justify-content: center;
   flex-flow: row wrap;
   padding: 30px 0;
+  background-color: #2a423a;
 }
 
 .reviews-image {
 	background: url('../img/omar-lopez-296944-unsplash.jpg');
 	background-size: cover;
 	height: 200px;
-}
-.reviews h3 {
-  width: 55%;
 }
 
 /* -------------------------------- FOOTER -------------------------------- */
@@ -301,7 +324,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-flow: column nowrap;
-  background: #f2f2f2;
+  background-color: #202322;
 }
 
 footer .content-wrapper {
@@ -344,6 +367,7 @@ footer .copyright {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 }
 
 .faq .content-wrapper {
@@ -356,6 +380,7 @@ footer .copyright {
 
 .faq h2 {
 	width: 100%;
+  margin: 0;
 }
 
 /* -------------------------------- ABOUT PAGE -------------------------------- */
@@ -365,7 +390,7 @@ footer .copyright {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  background: #f2f2f2;
+  background-color: #527158;
 }
 
 .mission .content-wrapper {
@@ -377,6 +402,7 @@ footer .copyright {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 
 .contact-section .content-wrapper {
@@ -502,7 +528,6 @@ footer .copyright {
   }
 
 	.content-wrapper {
-		width: 80%;
 		max-width: 640px;
 	}
 
@@ -632,6 +657,10 @@ footer .copyright {
 		flex-basis: 45%;
 	}
 
+  .faq h4 {
+    font-size: 1.3125em;
+  }
+
 	/*--------- ABOUT PAGE ---------*/
 
 	.mission .content-wrapper {
@@ -653,7 +682,7 @@ footer .copyright {
 	}
 
 	.contact-section .content-wrapper h2 {
-		width: 80%;
+		width: 85%;
 	}
 
 	.contact-content {
@@ -663,8 +692,9 @@ footer .copyright {
 	}
 
 	.contact-content div {
-		flex-basis: 48%;
+		width: 48%;
 	}
+
 }
 
 /* -------------------------------- DESKTOP -------------------------------- */
@@ -750,21 +780,27 @@ footer .copyright {
 
 	/*--------- FAQ PAGE ---------*/
 
+  .faq h2 {
+    font-size: 3em;
+  }
+
 
 
 	/*--------- ABOUT PAGE ---------*/
 
 	.mission h2 {
 		width: 90%;
-	}
-
-	.mission-content p {
-		width: 46%;
+    font-size: 3em;
 	}
 
 	.contact-section .content-wrapper h2 {
 		width: 100%;
+    font-size: 3em;
 	}
+
+  .contact-content h4 {
+    margin: 30px 0;
+  }
 
 }
 
