--- a/css/main.css
+++ b/css/main.css
@@ -98,62 +98,59 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  color: #e2e3ed;
+  text-align: left;
 }
 
 ul, ol {
-  color: #e2e3ed;
+
 }
 
 a {
-  color: #e2e3ed;
   text-decoration: none;
+  color: #e2e3ed;
 }
 
 h1 {
   font-family: 'Poppins', sans-serif;
   font-size: 2.25em;
   font-weight: 500;
-  color: #e2e3ed;
+  line-height: 1.2;
 }
 
 h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
   font-weight: 500;
-  color: #e2e3ed;
 }
 
 h3 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.125em;
   font-weight: 500;
-  color: #e2e3ed;
 }
 
 h4 {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.3125em;
+  font-size: 1.125em;
   font-weight: 500;
-  color: #e2e3ed;
 }
 
 p {
   font-size: 0.875em;
   line-height: 1.4;
-  color: #e2e3ed;
 }
 
 img {
-
+  width: 100%;
 }
 
 figure {
-
+  margin: 0;
 }
 
 address {
   font-style: normal;
-  color: #e2e3ed;
 }
 
 .content-wrapper {
@@ -178,11 +175,19 @@ header .content-wrapper {
   flex-flow: row wrap;
 }
 
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
 .header-divider {
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
-  background: #f2f2f2;
+  background: #3a3a3a;
 }
 
 header nav {
@@ -204,28 +209,23 @@ header nav ul {
   list-style: none;
 }
 
-header img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto; /* these 3 properties center an image in <a> element */
-  width: 70%; 
-}
-
 /* -------------------------------- HERO AREA -------------------------------- */
 
 .hero-area {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  height: 500px;
-  background: url('../img/jake-melara-30679-unsplash.jpg');
-  background-position: center;
+  min-height: 500px;
+  background: url('../img/jake-melara-30679-unsplash.jpg') center no-repeat;
   background-size: cover;
 }
 
+.hero-area .content-wrapper {
+  margin: 50px 0;
+}
+
 .hero-area h1 {
-	margin: 55px 0;
-	color: #fff;
+  margin: 0;
 }
 
 /* -------------------------------- NEWSLETTER -------------------------------- */
@@ -235,8 +235,11 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  padding: 10px 0 50px 0;
   background-color: #527158;
+}
+
+aside .content-wrapper {
+  margin: 50px 0;
 }
 
 input[type=text] {
@@ -267,8 +270,7 @@ input[type=button] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  background: url('../img/rawpixel-800820-unsplash1.jpg');
-  background-position: center;
+  background: url('../img/rawpixel-800820-unsplash1.jpg') center no-repeat;
   background-size: cover;
 }
 
@@ -280,7 +282,7 @@ input[type=button] {
 }
 
 .features .content-wrapper {
-	padding: 50px 0 65px 0;
+	margin: 50px 0;
 }
 
 .features article {
@@ -288,13 +290,9 @@ input[type=button] {
   justify-content: center;
   align-items: center;
   flex-flow: column wrap;
-  flex-basis: 63%;
+  width: 63%;
   margin: 30px 0;
   text-align: center;
-}
-
-.features h2 {
-  margin: 0; /*--to override browser's default <p> margins--*/
 }
 
 .features p {
@@ -307,14 +305,11 @@ input[type=button] {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  padding: 30px 0;
   background-color: #2a423a;
 }
 
-.reviews-image {
-	background: url('../img/omar-lopez-296944-unsplash.jpg');
-	background-size: cover;
-	height: 200px;
+.reviews .content-wrapper {
+  margin: 50px 0;
 }
 
 /* -------------------------------- FOOTER -------------------------------- */
@@ -325,6 +320,7 @@ footer {
   align-items: center;
   flex-flow: column nowrap;
   background-color: #202322;
+  text-align: center;
 }
 
 footer .content-wrapper {
@@ -346,10 +342,6 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.contact, .social {
-	text-align: center;
 }
 
 footer p {
@@ -543,8 +535,9 @@ footer .copyright {
 		flex-flow: row nowrap;
 	}
 
-	header a {
+	header figure {
 		width: 35%;
+    justify-content: flex-start;
 	}
 
 	header img {
@@ -574,7 +567,6 @@ footer .copyright {
 
 	.hero-area h1 {
 		width: 90%;
-		margin: 100px 0;
 	}
 
 	.form-description {
@@ -585,7 +577,7 @@ footer .copyright {
 		width: 45%;
 	}
 
-	/*--------- FEATURES ---------*/
+	/*--------- NEWSLETTER ---------*/
 
 	aside .content-wrapper {
 		display: flex;
@@ -594,8 +586,10 @@ footer .copyright {
 		flex-flow: row wrap;
 	}
 
+  /*--------- FEATURES ---------*/
+
 	.features .content-wrapper {
-		padding: 100px 0;
+		margin: 100px 0;
 	}
 
 	.features .features-items {
@@ -603,14 +597,18 @@ footer .copyright {
 	}
 
 	.features article {
-		flex-basis: 34%;
+		flex-basis: 50%;
 	}
+
+  .features .features-item-description {
+    width: 62%;
+  }
 
 	/*--------- REVIEWS ---------*/
 
-	.reviews {
-		padding: 80px 0;
-	}
+	.reviews .content-wrapper {
+    margin: 100px 0;
+  }
 
 	.reviews h2 {
 		width: 75%;
@@ -621,7 +619,7 @@ footer .copyright {
 		justify-content: space-between;
 	}
 
-	.reviews-image {
+	.reviews article figure {
 		width: 48%;
 	}
 
@@ -636,13 +634,13 @@ footer .copyright {
 	/*--------- FOOTER ---------*/
 
 	footer .content-wrapper {
-	  width: 80%;
+	  width: 65%;
 	  margin: 100px 0;
 	}
 
 	.footer-content {
 		display: flex;
-		justify-content: space-around;
+		justify-content: space-between;
 		align-items: flex-start;
 	}
 
@@ -712,7 +710,7 @@ footer .copyright {
   }
 
   h4 {
-    font-size: 2.1875em;
+    font-size: 2em;
   }
 
   p {
@@ -729,7 +727,7 @@ footer .copyright {
 		width: 15%;
 	}
 
-	header a {
+	header figure {
 		width: 30%;
 	}
 
@@ -737,7 +735,6 @@ footer .copyright {
 
 	.hero-area h1 {
 		width: 70%;
-		margin: 50px 0;
 	}
 
 	/*--------- NEWSLETTER ---------*/
@@ -761,7 +758,7 @@ footer .copyright {
 	}
 
 	.features article {
-		flex-basis: 26%;
+		flex-basis: 33%;
 	}
 
 	/*--------- REVIEWS ---------*/
@@ -770,21 +767,15 @@ footer .copyright {
 		align-items: center;
 	}
 
-	.reviews-image {
-		height: 300px;
-	}
-
-	.reviews-text {
-		width: 42%;
-	}
+  .reviews h2 {
+    padding-bottom: 50px;
+  }
 
 	/*--------- FAQ PAGE ---------*/
 
   .faq h2 {
     font-size: 3em;
   }
-
-
 
 	/*--------- ABOUT PAGE ---------*/
 
