--- a/css/main.css
+++ b/css/main.css
@@ -691,6 +691,10 @@ footer .copyright {
 		width: 48%;
 	}
 
+  .map figure {
+  padding-bottom: 46%;
+  }
+
 	.contact-section .content-wrapper {
 		margin: 100px 0;
 	}
@@ -799,6 +803,10 @@ footer .copyright {
 		width: 90%;
     font-size: 3em;
 	}
+
+  .map figure {
+  padding-bottom: 38%;
+  }
 
 	.contact-section .content-wrapper h2 {
 		width: 100%;
