--- a/css/main.css
+++ b/css/main.css
@@ -299,6 +299,11 @@ input[type=button] {
   margin: 0; /*--to override browser's default <p> margins--*/
 }
 
+.features i {
+  font-size: 3.75em;
+  margin-bottom: 40px;
+}
+
 /* -------------------------------- REVIEWS -------------------------------- */
 
 .reviews {
