--- a/css/main.css
+++ b/css/main.css
@@ -339,7 +339,7 @@ footer .contact {
 
 footer .social-icons {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -347,6 +347,16 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #527158;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  font-size: 1.15em;
+  color: #e2e3ed;
+}
+
+.social-icons i {
+  
 }
 
 footer p {
@@ -665,6 +675,10 @@ footer .copyright {
 		align-items: flex-start;
 	}
 
+  footer .social {
+    width: 40%;
+  }
+
 	/*--------- FAQ PAGE ---------*/
 
 	.faq .content-wrapper {
@@ -794,6 +808,12 @@ footer .copyright {
 
   .reviews h2 {
     padding-bottom: 50px;
+  }
+
+  /*--------- FOOTER ---------*/
+
+  footer .social {
+    width: 30%;
   }
 
 	/*--------- FAQ PAGE ---------*/
